tests/error/ptr_assign_invalid.gw
class C {}

class D extends C {}

D d;
d :=> <~int~>Ptr pd;
